--- a/assets/templates/steam_id.html
+++ b/assets/templates/steam_id.html
@@ -32,7 +32,7 @@
 </style>
 <div class="copy-container">
     <span class="copy-span" data-toggle="tooltip" data-placement="bottom" title="SHER" style="max-width: 30em;" id="text-to-copy" onclick="copySteam64()">
-        76561198240027748
+        {{steam_id}}
     </span>
     <a class="{{ ('profile-btn' if steam_profile_url else 'profile-btn-invalid') }}" {% if steam_profile_url %} href="{{ steam_profile_url }}" target="_blank" {% endif %}>
         <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="uLrSEQ" style="margin-top: 3px">
