--- a/assets/templates/match_page.html
+++ b/assets/templates/match_page.html
@@ -27,62 +27,8 @@
                 </div>
                 <div class="card-body">
                     <div class="list-group card-list-group">
-                        <div class="row">
-                            <div class="col-10">
-                                <div class="row">
-                                    <div class="col-5">
-                                        <div class="p-2 d-flex align-middle align-items-center justify-content-center">
-                                            <select data-allow-clear="true"
-                                                    data-placeholder="Select Team"
-                                                    id="team_left"
-                                                    name="team"
-                                                    class="form-control team-selector"
-                                                    data-url="{{url_for(request.app.state.ROUTE_NAME, path='api/team')}}"
-                                                    data-pk="id"
-                                            >
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="d-flex col-2 align-middle align-items-center justify-content-center">
-                                        <span class="p-2 fa-2xl font-weight-bold">VS</span>
-                                    </div>
-                                    <div class="col-5">
-                                        <div class="p-2 d-flex align-middle align-items-center justify-content-center">
-                                            <select data-allow-clear="true"
-                                                    data-placeholder="Select Team"
-                                                    id="team_right"
-                                                    name="team"
-                                                    class="form-control team-selector"
-                                                    data-url="{{url_for(request.app.state.ROUTE_NAME, path='api/team')}}"
-                                                    data-pk="id"
-                                            >
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-2 p-2 d-flex align-middle align-items-center justify-content-center">
-                                <span class="d-flex align-items-center justify-content-center w-auto h-auto">
-                                    <input class="form-check-input" type="checkbox" id="team_auto_detect">
-                                    <span class="fa-xl">auto</span>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="bg-red row">
-                            <div class="col-10">
-                                <div class="row bg-bitbucket">
-                                    <div class="bg-danger col-5">T</div>
-                                    <div class="bg-danger-lt col-2"><span class=""></span></div>
-                                    <div class="bg-vimeo col-5">CT</div>
-                                </div>
-                            </div>
-                            <div class="bg-azure col-2">
-                                <span>
-                                    <input class="form-check-input" type="checkbox">
-                                    <span>auto</span>
-                                </span>
-                            </div>
-                        </div>
+                        {% include "match_page_teams.html" %}
+                        {% include "match_page_sides.html" %}
                         <div class="row">
                             <div class="bg-blue col">MATCH TYPE:</div>
                             <div class="col-5">
