--- a/assets/templates/match_page_teams.html
+++ b/assets/templates/match_page_teams.html
@@ -10,6 +10,8 @@
                   class="form-control team-selector"
                   data-url="{{url_for(request.app.state.ROUTE_NAME, path='api/team')}}"
                   data-pk="id"
+                  {% if constants.team_left_id %}data-initial="{{ [constants.team_left_id] |tojson }}" {% endif %}
+                  {% if constants.team_auto_detect %}disabled{% endif %}
           >
           </select>
         </div>
@@ -26,6 +28,8 @@
                   class="form-control team-selector"
                   data-url="{{url_for(request.app.state.ROUTE_NAME, path='api/team')}}"
                   data-pk="id"
+                  {% if constants.team_right_id %}data-initial="{{ [constants.team_right_id] |tojson }}" {% endif %}
+                  {% if constants.team_auto_detect %}disabled{% endif %}
           >
           </select>
         </div>
@@ -34,7 +38,9 @@
   </div>
   <div class="col-2 p-2 d-flex align-middle align-items-center justify-content-center">
     <span class="d-flex align-items-center justify-content-center w-auto h-auto">
-      <input class="form-check-input" type="checkbox" id="team_auto_detect">
+      <input class="form-check-input" type="checkbox" id="team_auto_detect"
+      {% if constants.team_auto_detect %}checked{% endif %}
+      >
       <span class="fa-xl">auto</span>
     </span>
   </div>
