--- a/assets/templates/match_page.html
+++ b/assets/templates/match_page.html
@@ -29,13 +29,7 @@
                     <div class="list-group card-list-group">
                         {% include "match_page_teams.html" %}
                         {% include "match_page_sides.html" %}
-                        <div class="row">
-                            <div class="bg-blue col">MATCH TYPE:</div>
-                            <div class="col-5">
-                                <div class="bg-green row">BO1, BO2, BO3</div>
-                                <div class="bg-red row">000-000</div>
-                            </div>
-                        </div>
+                        {% include "match_page_BON.html" %}
                     </div>
                 </div>
             </div>
