--- a/huds/JohnTimmermann/template.pug
+++ b/huds/JohnTimmermann/template.pug
@@ -41,9 +41,9 @@ html
     section
 
       #live_page
-        #radar_border
-          #iframe
-            iframe(width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://85.192.56.67:36364")
+        //#radar_border
+        //  #iframe
+        //    iframe(width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://85.192.56.67:36364")
         //- Players alive section
         #players_alive
           #PA_title_container Players Alive
