--- a/assets/templates/match_page.html
+++ b/assets/templates/match_page.html
@@ -30,6 +30,7 @@
                         {% include "match_page_teams.html" %}
                         {% include "match_page_sides.html" %}
                         {% include "match_page_BON.html" %}
+                        {% include "match_page_refresh.html"%}
                     </div>
                 </div>
             </div>
