--- a/assets/templates/match_page.html
+++ b/assets/templates/match_page.html
@@ -28,7 +28,7 @@
                 <div class="card-body">
                     <div class="list-group card-list-group">
                         {% include "match_page_teams.html" %}
-<!--                        {% include "match_page_sides.html" %}-->
+                        {% include "match_page_sides.html" %}
                         {% include "match_page_BON.html" %}
                         {% include "match_page_refresh.html"%}
                     </div>
